Move every walk of a form's positions onto the order its atom domain decides
The walks that were left took the coefficients as the mapping handed them over:
what is left to bound once a premise is used, which two positions a difference is
between, which positions a set of rules is about. Each of them answers the same
thing whichever order it walks in today — a merge that is commutative per
position, a pick by the weight at one, a union — and none of that is a reason to
keep the walk. What makes the answer independent of the order is a fact about
those bodies as they stand, and the walk is what lets the next change to one of
them start depending on it.

So a form holds no order at all now. The mapping answers what a position weighs
and whether the form names one; a reader that walks the positions asks the atom
domain for an order and is refused the pair that order cannot tell apart. Which
was not something to do by reading each reader and being satisfied: a rule says
it, with one reader compiled beside it that does take the walk, so that finding
none among what this repository publishes is an answer about the readers rather
than about the rule.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>